--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,9 @@ requirements:
     - tqdm
     - rdkit >=2020.03.6
     - requests
+    - python-wget
+    - matplotlib
+    - scipy
 
 test:
   imports:
